--- a/static/index.html
+++ b/static/index.html
@@ -1201,7 +1201,10 @@ async function ingestCsv() {
       });
       
       alert(`Success! Added ${res.added_entities} entities and ${res.added_evidence} evidence items.`);
+      alert(`✅ Success! Added ${res.added_payments} payments with data source "${dataSource}" and tag "${tag}".\n\nFilters will now show these options!`);
       $("uploadCsvPanel").style.display = "none";
+      // Force refresh filters immediately
+      await loadPaymentTags();
       await recompute();
       await refresh();
     } catch (e) {
